--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.10.5",
+        "jquery": "^3.7.0"
     }
 }
